--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -22,11 +22,11 @@
         android:id="@+id/image_settings"
         android:layout_width="36dp"
         android:layout_height="36dp"
-        android:src="@drawable/icon_settings"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginTop="12dp"
-        android:layout_marginEnd="12dp"/>
+        android:layout_marginEnd="12dp"
+        android:src="@drawable/icon_settings"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
         android:id="@+id/image_profile"
