Pull 하기 전 임시 저장

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,6 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="left_balloon">#7AC31F</color>
+    <color name="right_balloon">#1F7AC3</color>
 </resources>
