--- a/app/src/main/res/layout/activity_post_detail.xml
+++ b/app/src/main/res/layout/activity_post_detail.xml
@@ -31,12 +31,14 @@
             app:layout_constraintTop_toTopOf="parent">
 
             <ImageView
+                android:id="@+id/iv_post_writer_image"
                 android:layout_width="28dp"
                 android:layout_height="28dp"
                 android:background="@drawable/shape_circle"
                 android:clipToOutline="true" />
 
             <TextView
+                android:id="@+id/tv_post_writer_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
@@ -48,6 +50,7 @@
         </LinearLayout>
 
         <TextView
+            android:id="@+id/tv_post_content"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ellipsize="end"
@@ -60,6 +63,7 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_place_list"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
@@ -82,6 +86,7 @@
             tools:text="댓글" />
 
         <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rv_comment"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
