--- a/app/src/main/res/layout/rv_item_post_detail_comment.xml
+++ b/app/src/main/res/layout/rv_item_post_detail_comment.xml
@@ -1,39 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:tools="http://schemas.android.com/tools"
     android:background="@color/gray"
     android:orientation="vertical"
     android:paddingHorizontal="16dp"
     android:paddingVertical="4dp">
 
     <LinearLayout
-        android:id="@+id/ly_writer_info"
+        android:id="@+id/ly_comment_writer_info"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
 
         <ImageView
+            android:id="@+id/iv_comment_writer_image"
             android:layout_width="28dp"
             android:layout_height="28dp"
             android:background="@drawable/shape_circle"
             android:clipToOutline="true" />
 
         <TextView
-            tools:text="작성자"
+            android:id="@+id/tv_comment_writer_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:layout_marginStart="4dp"
             android:ellipsize="end"
             android:maxLines="1"
-            android:textSize="14sp" />
+            android:textSize="14sp"
+            tools:text="작성자" />
     </LinearLayout>
+
     <TextView
+        android:id="@+id/tv_comment_content"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="18sp"
-        tools:text="좋은 정보 감사합니다! 워케이션 준비에 도움이 많이 되었어요~"
-        />
+        tools:text="좋은 정보 감사합니다! 워케이션 준비에 도움이 많이 되었어요~" />
 </LinearLayout>
