--- a/app/src/main/res/layout/activity_add_post.xml
+++ b/app/src/main/res/layout/activity_add_post.xml
@@ -24,19 +24,20 @@
         android:paddingHorizontal="16dp"
         android:paddingVertical="4dp">
 
-        <TextView
-            android:id="@+id/tv_post_content"
+        <EditText
+            android:id="@+id/et_post_content"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="null"
             android:hint="게시글 내용을 입력해 주세요"
             android:textSize="20sp" />
     </LinearLayout>
 
     <androidx.recyclerview.widget.RecyclerView
-        android:layout_marginVertical="4dp"
         android:id="@+id/rv_place_list"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginVertical="4dp"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         tools:itemCount="2"
         tools:listitem="@layout/rv_item_add_post_header" />
