--- a/app/src/main/res/layout/rv_item_post_detail_place.xml
+++ b/app/src/main/res/layout/rv_item_post_detail_place.xml
@@ -46,14 +46,12 @@
         app:layout_constraintTop_toBottomOf="@id/ly_place_name"
         tools:visibility="visible">
 
-        <ImageView
-            android:id="@+id/iv_place_image"
+        <androidx.viewpager2.widget.ViewPager2
+            android:id="@+id/vp_place_image"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:adjustViewBounds="true"
-            android:background="@color/gray_dark"
-            android:minHeight="300dp"
-            android:scaleType="centerCrop" />
+            android:orientation="horizontal"
+            />
 
         <TextView
             android:id="@+id/tv_place_detail_content"
