--- a/app/src/main/res/values/place_category.xml
+++ b/app/src/main/res/values/place_category.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string-array name="place_category">
-        <string>공유 오피스</string>
-        <string>식당</string>
-        <string>카페</string>
-        <string>숙소</string>
-    </string-array>
+<!--    <string-array name="place_category">-->
+<!--        <item>공유 오피스</item>-->
+<!--        <item>식당</item>-->
+<!--        <item>카페</item>-->
+<!--        <item>숙소</item>-->
+<!--    </string-array>-->
 </resources>
