--- a/app/src/main/res/layout/activity_add_post.xml
+++ b/app/src/main/res/layout/activity_add_post.xml
@@ -28,7 +28,7 @@
             android:id="@+id/et_post_content"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="null"
+            android:background="@null"
             android:hint="게시글 내용을 입력해 주세요"
             android:textSize="20sp" />
     </LinearLayout>
