--- a/app/src/main/res/layout/rv_item_community.xml
+++ b/app/src/main/res/layout/rv_item_community.xml
@@ -17,7 +17,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
-            android:id="@+id/iv_writer_image"
+            android:id="@+id/iv_writer_profile"
             android:layout_width="28dp"
             android:layout_height="28dp"
             android:background="@drawable/shape_circle"
