--- a/app/src/main/res/layout/activity_post_detail.xml
+++ b/app/src/main/res/layout/activity_post_detail.xml
@@ -9,6 +9,7 @@
     tools:context=".ui.community.screen.postDetail.PostDetailActivity">
 
     <com.google.android.material.appbar.MaterialToolbar
+        android:id="@+id/top_app_bar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:minHeight="?attr/actionBarSize"
@@ -22,7 +23,7 @@
         android:paddingHorizontal="16dp"
         android:paddingVertical="4dp">
 
-        <LinearLayout
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/ly_writer_info"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -35,19 +36,37 @@
                 android:layout_width="28dp"
                 android:layout_height="28dp"
                 android:background="@drawable/shape_circle"
-                android:clipToOutline="true" />
+                android:clipToOutline="true"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
                 android:id="@+id/tv_post_writer_name"
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
-                android:layout_marginStart="4dp"
+                android:layout_marginHorizontal="4dp"
                 android:ellipsize="end"
                 android:maxLines="1"
                 android:textSize="14sp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@id/tv_post_time"
+                app:layout_constraintStart_toEndOf="@id/iv_post_writer_image"
+                app:layout_constraintTop_toTopOf="parent"
                 tools:text="작성자" />
-        </LinearLayout>
+
+            <TextView
+                android:id="@+id/tv_post_time"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="14sp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:text="2024/08/24" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
 
         <TextView
             android:id="@+id/tv_post_content"
