--- a/app/src/main/res/layout/rv_item_post_detail_place.xml
+++ b/app/src/main/res/layout/rv_item_post_detail_place.xml
@@ -50,8 +50,16 @@
             android:id="@+id/vp_place_image"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            />
+            android:orientation="horizontal" />
+
+        <TextView
+            android:id="@+id/tv_place_address"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="16dp"
+            android:layout_marginTop="4dp"
+            android:textSize="18sp"
+            tools:text="00도 00시 00구 0000로 00" />
 
         <TextView
             android:id="@+id/tv_place_detail_content"
