--- a/app/src/main/res/layout/activity_post_detail.xml
+++ b/app/src/main/res/layout/activity_post_detail.xml
@@ -64,7 +64,7 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                tools:text="2024/08/24" />
+                tools:text="2024/08/24 00:00:00" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
 
