--- a/app/src/main/res/layout/rv_item_post_detail_comment.xml
+++ b/app/src/main/res/layout/rv_item_post_detail_comment.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -8,7 +9,7 @@
     android:paddingHorizontal="16dp"
     android:paddingVertical="4dp">
 
-    <LinearLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/ly_comment_writer_info"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -19,19 +20,35 @@
             android:layout_width="28dp"
             android:layout_height="28dp"
             android:background="@drawable/shape_circle"
-            android:clipToOutline="true" />
+            android:clipToOutline="true"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/tv_comment_writer_name"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
-            android:layout_marginStart="4dp"
+            android:layout_marginHorizontal="4dp"
             android:ellipsize="end"
             android:maxLines="1"
             android:textSize="14sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/tv_comment_time"
+            app:layout_constraintStart_toEndOf="@id/iv_comment_writer_image"
+            app:layout_constraintTop_toTopOf="parent"
             tools:text="작성자" />
-    </LinearLayout>
+
+        <TextView
+            android:id="@+id/tv_comment_time"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:text="2024/08/27 00:00:00" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <TextView
         android:id="@+id/tv_comment_content"
