Fix: Add constraints to view pager

--- a/app/src/main/res/layout/rv_item_post_detail_place.xml
+++ b/app/src/main/res/layout/rv_item_post_detail_place.xml
@@ -55,7 +55,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:orientation="horizontal"
-                app:layout_constraintDimensionRatio="H,1:1" />
+                app:layout_constraintDimensionRatio="H,1:1"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <TextView
