--- a/app/src/main/res/layout/activity_add_post.xml
+++ b/app/src/main/res/layout/activity_add_post.xml
@@ -9,29 +9,13 @@
     tools:context=".ui.community.screen.addPost.AddPostActivity">
 
     <com.google.android.material.appbar.MaterialToolbar
+        android:id="@+id/top_app_bar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:minHeight="?attr/actionBarSize"
         app:menu="@menu/add_post_top_app_bar"
         app:navigationIcon="@drawable/ic_arrow_backward_24"
         app:title="게시글 작성" />
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/gray"
-        android:minHeight="150dp"
-        android:paddingHorizontal="16dp"
-        android:paddingVertical="4dp">
-
-        <EditText
-            android:id="@+id/et_post_content"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@null"
-            android:hint="게시글 내용을 입력해 주세요"
-            android:textSize="20sp" />
-    </LinearLayout>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_place_list"
@@ -40,31 +24,6 @@
         android:layout_marginVertical="4dp"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         tools:itemCount="2"
-        tools:listitem="@layout/rv_item_add_post_header" />
-
-    <LinearLayout
-        android:id="@+id/ly_add_place"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/gray_dark"
-        android:gravity="center"
-        android:orientation="horizontal"
-        android:paddingVertical="4dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/ic_add_24" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="목록 추가"
-            android:textSize="22sp" />
-    </LinearLayout>
+        tools:listitem="@layout/rv_item_add_post_place_list" />
 
 </LinearLayout>
