--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,5 +4,6 @@
     <color name="white">#FFFFFFFF</color>
     <color name="gray">#A5A5A5</color>
     <color name="gray_dark">#707070</color>
+    <color name="rain_info">#407CC5</color>
 
 </resources>
