--- a/app/src/main/res/layout/fragment_place_info.xml
+++ b/app/src/main/res/layout/fragment_place_info.xml
@@ -14,5 +14,5 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-    tools:listitem="@layout/rv_item_office" />
+    tools:listitem="@layout/rv_item_place" />
 </androidx.constraintlayout.widget.ConstraintLayout>
