--- a/app/src/main/res/menu/add_post_top_app_bar.xml
+++ b/app/src/main/res/menu/add_post_top_app_bar.xml
@@ -2,7 +2,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/register_post"
+        android:id="@+id/add_post_register"
         android:title="등록"
         android:contentDescription="커뮤니티 글 등록"
         app:showAsAction="always"
