--- a/app/src/main/res/menu/community_top_app_bar.xml
+++ b/app/src/main/res/menu/community_top_app_bar.xml
@@ -2,7 +2,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/add_post"
+        android:id="@+id/community_add_post"
         android:title="글 쓰기"
         android:contentDescription="커뮤니티 글 쓰기"
         app:showAsAction="always"
