--- a/app/src/main/res/menu/post_detail_top_app_bar.xml
+++ b/app/src/main/res/menu/post_detail_top_app_bar.xml
@@ -2,7 +2,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/report_post"
+        android:id="@+id/post_detail_report"
         android:title="신고하기"
         android:contentDescription="게시글 신고하기"
         app:showAsAction="never"
