--- a/app/src/main/res/layout/activity_on_boding.xml
+++ b/app/src/main/res/layout/activity_on_boding.xml
@@ -18,11 +18,12 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <Button
+    <ImageView
         android:id="@+id/btn_login"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="로그인"
+        android:src="@drawable/kakao_login_medium_wide"
+        android:layout_marginTop="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btn_start" />
@@ -45,11 +46,18 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btn_logout" />
 
-    <Button
+    <TextView
         android:id="@+id/btn_start"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="시작하기"
+        android:gravity="center"
+        android:textSize="16sp"
+        android:padding="10dp"
+        android:layout_marginStart="56dp"
+        android:layout_marginEnd="56dp"
+        android:textColor="@color/white"
+        android:background="@color/light_black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
