feat: 테스터 심사 준비로 마이페이지 임시 제거

--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -12,7 +12,7 @@
         android:id="@+id/navigation_community"
         android:title="커뮤니티" />
 
-    <item
-        android:id="@+id/navigation_profile"
-        android:title="프로필" />
+<!--    <item-->
+<!--        android:id="@+id/navigation_profile"-->
+<!--        android:title="프로필" />-->
 </menu>
