--- a/app/src/main/res/layout/dialog_repost_post.xml
+++ b/app/src/main/res/layout/dialog_repost_post.xml
@@ -27,6 +27,7 @@
             android:orientation="horizontal">
 
             <TextView
+                android:id="@+id/tv_content_label"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:width="50dp"
@@ -34,7 +35,7 @@
                 android:textStyle="bold" />
 
             <TextView
-                android:id="@+id/tv_post_title"
+                android:id="@+id/tv_content"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ellipsize="end"
@@ -55,7 +56,7 @@
                 android:textStyle="bold" />
 
             <TextView
-                android:id="@+id/tv_post_writer"
+                android:id="@+id/tv_writer"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ellipsize="end"
