--- a/app/src/main/res/layout/rv_item_community.xml
+++ b/app/src/main/res/layout/rv_item_community.xml
@@ -3,8 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="140dp"
-    android:background="@color/gray"
+    android:layout_height="wrap_content"
+    android:background="@color/white"
     android:paddingHorizontal="16dp"
     android:paddingVertical="4dp">
 
@@ -31,6 +31,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:layout_marginVertical="4dp"
+            android:layout_marginHorizontal="8dp"
             android:ellipsize="end"
             android:maxLines="1"
             android:textSize="14sp"
@@ -52,23 +53,24 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <TextView
+        android:layout_marginTop="8dp"
         android:id="@+id/tv_post_content"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:ellipsize="end"
         android:maxLines="2"
-        android:textSize="22sp"
-        app:layout_constraintBottom_toBottomOf="@id/ly_post_info"
+        android:textSize="18sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/ly_writer_info"
         tools:text="춘천에 7박 8일로 다녀온 워케이션 정보 공유합니다~" />
 
     <LinearLayout
+        android:layout_marginTop="8dp"
         android:id="@+id/ly_post_info"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tv_post_content"
         app:layout_constraintStart_toStartOf="parent">
 
         <TextView
@@ -86,6 +88,4 @@
             android:textSize="14sp"
             tools:text="총 장소 8개" />
     </LinearLayout>
-
-
 </androidx.constraintlayout.widget.ConstraintLayout>
