--- a/app/src/main/res/layout/rv_item_post_detail_comment.xml
+++ b/app/src/main/res/layout/rv_item_post_detail_comment.xml
@@ -4,8 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/gray"
     android:orientation="vertical"
+    android:background="@color/white"
     android:paddingHorizontal="16dp"
     android:paddingVertical="4dp">
 
@@ -29,7 +29,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
-            android:layout_marginHorizontal="4dp"
+            android:layout_marginHorizontal="8dp"
             android:ellipsize="end"
             android:maxLines="1"
             android:textSize="14sp"
