--- a/app/src/main/res/layout/rv_item_post_detail_comment_header.xml
+++ b/app/src/main/res/layout/rv_item_post_detail_comment_header.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
+    android:background="@color/white"
     android:layout_height="wrap_content">
-
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingHorizontal="16dp"
         android:paddingVertical="4dp"
-        android:textSize="22sp"
+        android:textSize="20sp"
+        android:textStyle="bold"
         android:text="댓글" />
 </LinearLayout>
