--- a/app/src/main/res/layout/rv_item_post_detail_post.xml
+++ b/app/src/main/res/layout/rv_item_post_detail_post.xml
@@ -29,7 +29,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
-            android:layout_marginHorizontal="4dp"
+            android:layout_marginHorizontal="8dp"
             android:ellipsize="end"
             android:maxLines="1"
             android:textSize="14sp"
@@ -57,8 +57,8 @@
         android:layout_height="wrap_content"
         android:ellipsize="end"
         android:maxLines="2"
-        android:minHeight="120dp"
         android:textSize="20sp"
+        android:layout_marginTop="8dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/ly_writer_info"
         tools:text="춘천에 7박 8일로 다녀온 워케이션 정보 공유합니다~" />
